Add Placeholders for TLSv1.2 and test updates